# public/swagger/swagger.yaml
@@ -62,6 +62,76 @@ paths:
       responses:
         '200':
           description: ...
+  /bans:
+    get:
+      tags:
+        - bans
+      summary: 'Lista todos os bans até o momento'
+      operationId: GetBanList
+      responses:
+        '200':
+          description: ...
+    post:
+      tags:
+        - bans
+      summary: 'Cria um novo ban'
+      operationId: StoreBan
+      parameters:
+        -
+          name: admin_id
+          in: query
+          description: 'ID de quem deu o ban'
+          required: true
+          schema:
+            type: string
+        -
+          name: victim_id
+          in: query
+          description: 'ID de quem recebeu o ban'
+          required: true
+          schema:
+            type: string
+        -
+          name: type
+          in: query
+          description: 'Tipo de ban (ban/mute/kick)'
+          required: true
+          schema:
+            type: string
+        -
+          name: reason
+          in: query
+          description: 'Razão do ban'
+          required: true
+          schema:
+            type: string
+        -
+          name: time
+          in: query
+          description: 'Duração do ban'
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: ...
+  '/bans/{id}/revoke':
+    get:
+      tags:
+        - bans
+      summary: 'Lista todos os bans até o momento'
+      operationId: GetBanList
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'ID do usuário'
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: ...
   /languages:
     get:
       tags:
